[ADD] refreshToken function
