# chapter_vii/hola/src/modules/swagger/swagger.json
@@ -165,6 +165,19 @@
         }
       }
     },
+    "/refresh-token": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/user/{id}": {
       "put": {
         "tags": [
